--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ html, body, #background {
 }
 
 #controls > * {
-	padding: 40px;
+	margin: 40px;
 }
 
 .bans {
@@ -97,4 +97,25 @@ html, body, #background {
   position: absolute;
   margin-top: 20px;
   transform: translate(-50%, 0);
+}
+
+#results {
+	margin: 15px;
+	padding: 20px;
+	border: 4px solid;
+	border-radius: 20px;
+	background-color: rgba(255,255,255,0.7);
+}
+
+.result {
+	margin: 20px;
+}
+
+.result > * {
+	display: inline-block;
+	margin: 10px;
+}
+
+.result-scores {
+	position: absolute;
 }
