--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ html, body, #background {
 	border-radius: 20px;
 	display: flex;
 	background-color: rgba(255,255,255,0.7);
+	overflow: scroll;
 }
 
 #controls > * {
