--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html, body, #background {
 }
 
 .picks {
-	height:640px;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;	
@@ -47,14 +47,18 @@ html, body, #background {
 	border-color: red;
 }
 
-#champ-pool {
-	overflow-y: scroll;
+#champ-pool-container {
 	max-width: 1000px;
+	border: 3px solid;
+	margin: 10px;
+}
+
+#champ-pool {
+	height: 100%;
+	overflow-y: scroll;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	border: 3px solid;
-	margin: 10px;
 }
 
 .champ {
