--- a/style.css
+++ b/style.css
@@ -73,17 +73,23 @@ html, body, #background {
 	cursor: pointer;
 }
 
-#controls {
+#sections > * {
 	margin: 15px;
 	border: 4px solid;
-	border-radius: 20px;
-	display: flex;
 	background-color: rgba(255,255,255,0.7);
+	border-radius: 20px;
+	padding: 20px;
+}
+
+#controls {
+	display: flex;
+	justify-content: space-around;
 	overflow: scroll;
 }
 
 #controls > * {
-	padding: 40px;
+	padding: 20px;
+	max-width: 400px;
 }
 
 .bans {
@@ -110,14 +116,6 @@ html, body, #background {
 
 #status-div {
 	white-space: nowrap;
-}
-
-#results {
-	margin: 15px;
-	padding: 20px;
-	border: 4px solid;
-	border-radius: 20px;
-	background-color: rgba(255,255,255,0.7);
 }
 
 .result {
