--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ html, body, #background {
 }
 
 #buttons > button {
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 	font-size: 2em;
 	padding: 14px;
 	border-radius: 15px;
