--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ html, body, #background {
     z-index: -1;
 }
 
+.courier-new {
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	font-weight: bold;
+}
+
 #logo-container1 {
 	padding: 20px;
 	text-align: center;
@@ -23,13 +28,12 @@ html, body, #background {
 	border: 2px solid;
 	border-radius: 15px;
 	margin: 0 auto;
-	padding: 20px;
+	padding: 10px;
 	display: inline-block;
 }
 
 #logo {
-	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-	font-size: 8em;
+	font-size: 5em;
 	display: inline-block;
 }
 
@@ -85,7 +89,7 @@ html, body, #background {
 	flex-wrap: wrap;
 }
 
-#champ-pool .champ {
+.champ {
 	height: 60px;
 	width: 60px;
 	margin: 15px;
@@ -93,7 +97,7 @@ html, body, #background {
 	cursor: pointer;
 }
 
-#sections > * {
+.section {
 	margin: 15px;
 	border: 4px solid;
 	background-color: rgba(255,255,255,0.7);
@@ -101,7 +105,7 @@ html, body, #background {
 	padding: 20px;
 }
 
-#sections > div > div {
+.text-section > * {
 	padding: 7px;
 }
 
@@ -111,7 +115,7 @@ html, body, #background {
 	overflow: scroll;
 }
 
-#controls > * {
+.control-container {
 	padding: 20px;
 	max-width: 400px;
 }
@@ -120,11 +124,11 @@ html, body, #background {
 	width: 350px;
 }
 
-#slider-div {
+#sliders-container {
 	min-width: 300px;
 }
 
-#slider-div > * {
+.slider-container {
 	padding-bottom: 24px;
 }
 
@@ -143,8 +147,7 @@ html, body, #background {
 	justify-content: space-around;
 }
 
-#buttons > button {
-	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+.button {
 	font-size: 2em;
 	padding: 14px;
 	border-radius: 15px;
@@ -155,7 +158,7 @@ html, body, #background {
 	margin: 20px;
 }
 
-.result > * {
+.result-part {
 	display: inline-block;
 	margin: 10px;
 }
