--- a/style.css
+++ b/style.css
@@ -18,28 +18,23 @@ html, body, #background {
 	font-weight: bold;
 }
 
-#logo-container1 {
+.section {
+	margin: 15px;
+	border: 4px solid;
+	background-color: rgba(255,255,255,0.7);
+	border-radius: 20px;
 	padding: 20px;
-	text-align: center;
-}
-
-#logo-container2 {
-	background-color: rgba(255,255,255,0.8);
-	border: 2px solid;
-	border-radius: 15px;
-	margin: 0 auto;
-	padding: 10px;
-	display: inline-block;
 }
 
 #logo {
-	font-size: 5em;
+	font-size: 3em;
 	display: inline-block;
+	padding: 5px;
 }
 
 #champ-select {
 	padding: 20px;
-	height: 700px;
+	height: 650px;
 	display: flex;
 	justify-content: center;
 }
@@ -97,18 +92,6 @@ html, body, #background {
 	cursor: pointer;
 }
 
-.section {
-	margin: 15px;
-	border: 4px solid;
-	background-color: rgba(255,255,255,0.7);
-	border-radius: 20px;
-	padding: 20px;
-}
-
-.text {
-	font-size: 1.2em;
-}
-
 #controls {
 	display: flex;
 	justify-content: space-around;
@@ -154,6 +137,11 @@ html, body, #background {
 	background-color: white;
 }
 
+#results {
+	max-height: 800px;
+	overflow: scroll;
+}
+
 .result {
 	margin: 20px;
 }
@@ -163,6 +151,6 @@ html, body, #background {
 	margin: 10px;
 }
 
-.result-scores {
-	position: absolute;
+.text {
+	font-size: 1.2em;
 }
