--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body, #background {
 }
 
 .section {
-	margin: 30px;
+	margin: 45px;
 	border: 4px solid;
 	background-color: rgba(255,255,255,0.7);
 	border-radius: 20px;
@@ -125,7 +125,7 @@ html, body, #background {
 	background: #519D9E;
 }
 
-.slider label {
+.slider-label {
   position: absolute;
   margin: 20px auto;
   transform: translate(-50%, 0);
@@ -134,6 +134,7 @@ html, body, #background {
 #buttons {
 	display: flex;
 	justify-content: space-around;
+	margin-top: 40px;
 }
 
 .button {
